manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-svc
  namespace: demo-api
  labels:
    app: demo-api
spec:
  selector:
    app: demo-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
