manifests/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-demo-api
  namespace: demo-api
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`demo-api.demo.local`)
    services:
      - name: demo-api-svc
        port: 80
